--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Client
-@using Client.Shared
+@using BlazorApp.Client
+@using BlazorApp.Client.Shared
