Migrate sample to .NET 8

--- a/Client/Pages/FetchData.razor
+++ b/Client/Pages/FetchData.razor
@@ -2,6 +2,8 @@
 @using BlazorApp.Shared 
 @inject HttpClient Http
 
+<PageTitle>Weather</PageTitle>
+
 <h1>Weather forecast</h1>
 
 <p>This component demonstrates fetching data from the server.</p>
