--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -7,4 +7,4 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorApp.Client
-@using BlazorApp.Client.Shared
+@using BlazorApp.Client.Layout
